<resources>
    <string name="app_name">SlopShop</string>

    <string name="abrir_drawer">Abrir drawer</string>
    <string name="cerrar_drawer">Cerrar drawer</string>

    <string name="tipoUsuario">Usuarios</string>
    <string name="tipoAdmin">Administrador</string>

    <string name="default_web_client_id">956404146006-v7tri44isgvn7abhnm7e9eo0hcsbi7oa.apps.googleusercontent.com</string>


    <!--REGISTRO-->
    <string name="txtRegistroA">Registrar Administrador</string>
    <string name="txtRegistroU">Registrar Usuario</string>
    <string name="Nombre">Nombre y Apellidos</string>
    <string name="Email">Email</string>
    <string name="Contrasena">Contraseña</string>
    <string name="ConfirmarContrasena">Confirmar Contraseña</string>
    <string name="Registrar">Registrarse</string>
    <string name="txtLogin">Iniciar Sesión</string>
    <string name="btnLogin">Ingresar</string>
    <string name="noCuenta">¿Aun no estas registrado?</string>
    <string name="txtRegistrar">Registrame</string>
    <!--OPCIONES DRAWER-->
    <string name="opcionInicio">Inicio</string>
    <string name="opcionTienda">Mi tienda</string>
    <string name="opcionReseñas">Reseñas</string>
    <string name="opcionCerrarSesion">Cerrar sesión</string>
    <string name="opcionPerfil">Perfil</string>
    <string name="opcionProductos">Mis Productos</string>
    <string name="opcionPedidos">Pedidos</string>
    <string name="opcionMisPedidos">Mis Pedidos</string>
    <string name="opcionCatalogo">Catálogo</string>
    <string name="textoInicio">Bienvenid@ a SlopShop</string>
    <string name="opcionCategorias">Categorías</string>
    <!--PRODUCTOS-->
    <string name="txtAgregarProductos">Agregar Productos</string>
    <string name="NombreP">Nombre del producto</string>
    <string name="Descripcion">Descripción</string>
    <string name="Categoria">Añadir Categoría</string>
    <string name="Precio">Precio</string>
    <string name="Descuento">Descuento</string>
    <string name="PrecioConDescuento">Precio con descuento aplicado</string>
    <string name="ejemploDescuento">Ejm: 10% Desc.</string>
    <string name="btnAgregarProducto">Agregar Producto</string>

    <!--CATEGORIAS-->
    <string name="pedirCategoria">Introduzca la categoría</string>
    <string name="btnAgregarCategoria">Agregar la categoría</string>
    <string name="nombreCategoria">Nombre de la categoría:</string>

    <!--PRODUCTOS-->
    <string name="nombreProducto">Nombre del producto</string>
    <string name="ejemploProducto">40% Descuento</string>
    <string name="precioProducto">00</string>
    <string name="descuentoProducto">00</string>
    <string name="anteriorProducto">Anterior</string>
    <string name="siguienteProducto">Siguiente</string>
    <string name="paginaProducto">Página %1$d de %2$d</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>