<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/grupoOpciones"
        android:checkableBehavior="single">

        <item
            android:id="@+id/opcionInicio_a"
            android:title="@string/opcionInicio"
            android:icon="@drawable/icono_inicio"
            />

        <item
            android:id="@+id/opcionTienda_a"
            android:title="@string/opcionTienda"
            android:icon="@drawable/icono_tienda"
            />

        <item
            android:id="@+id/opcionCategorias_a"
            android:title="@string/opcionCategorias"
            android:icon="@drawable/icono_categorias"
            />

        <item
            android:id="@+id/opcionReseñas_a"
            android:title="@string/opcionReseñas"
            android:icon="@drawable/icono_resenas"
            />
    </group>

    <item
        android:id="@+id/opcionCerrarSesion_a"
        android:title="@string/opcionCerrarSesion"
        android:icon="@drawable/icono_salir"
    />
</menu>