<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="7dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imagenProducto"
            android:src="@drawable/icono_producto"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/nombreProducto"
            android:text="@string/nombreProducto"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="7dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:maxLines="1"
            android:fontFamily="@font/handwrite"/>
        />

        <TextView
            android:id="@+id/ejemploDescuento"
            android:text="@string/ejemploProducto"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:visibility="gone"
            android:background="@drawable/fondo_oferta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/precioProducto"
            android:text="@string/precioProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            android:layout_gravity="bottom"
            android:textStyle="bold"
            android:textSize="18sp"
            />

        <TextView
            android:textStyle="bold"
            android:id="@+id/precioDescuento"
            android:text="@string/descuentoProducto"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            android:textColor="#43A047"
            android:textSize="18sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>